--- a/style.css
+++ b/style.css
@@ -17,17 +17,39 @@ html {
   --color-food: #FEEAFA;
 }
 body {
-  text-align: center;
+  /* text-align: center; */
+
+  display: flex;
+  justify-content: center;
+}
+body::before {
+  content: '';
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -2;
+
+  width: 100%;
+  height: 279px;
+
+  background-color: var(--bg-header);
+}
+
+.page {
+  max-width: 38.4rem;
 }
 
 .header {
-  background-color: var(--bg-header);
+  padding: 3.2rem 0;
 
-  padding: 3.2rem 0 2.9rem;
+  display: flex;
+  flex-direction: column;
 }
 .header img {
   width: 13.7rem;
-  margin-bottom: 3.2rem;
+  margin: 0 auto 3.2rem;
+  text-align: center;
 }
 .header h1 {
   background-color: var(--color-title);
@@ -64,6 +86,8 @@ main p {
   flex-direction: column;
   align-items: center;
   gap: 3.2rem;
+
+  animation: downTop 900ms backwards;
 }
 .food {
   position: relative;
@@ -88,4 +112,30 @@ main p {
   border-radius: 2rem;
 
   padding: 0 2.4rem;
+
+  animation: topDown 2100ms;
 }
+@keyframes downTop {
+  0% {
+    opacity: 0;
+    transform: translateY(15px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes topDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-15px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
+
